--- a/meesho/package.json
+++ b/meesho/package.json
@@ -20,6 +20,7 @@
     "react-otp-input": "^2.4.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-snackbar": "^1.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
